--- a/index.html
+++ b/index.html
@@ -4,14 +4,33 @@
     <head> 
         <title>popurriin</title>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anonymous+Pro&family=Lato&display=swap" rel="stylesheet">
+        <style> @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anonymous+Pro&family=Lato&display=swap'); </style>
+        
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <nav></nav>
+        <nav>
 
-        <h1>Computer Engineering Student</h1>
-            <h2>Shannon Victoria Delloro Jones</h2>
+        </nav>
+
+        <style>
+            
+        </style>
+
+        <div class="leaves"></div>
+        <a><div class="github"></div></a>
+        <a><div class="linkedin" ></div></a>
+        <a><div class="email" ></div></a>
+        <div class="vl"></div>
+
+        <div class="title">
+            <h1>Computer Engineering <br> Student</h1>
+                <h2>Shannon Victoria Delloro Jones</h2>
+        </div>
 
         <div>
             <h1>About</h1>
