--- a/index.html
+++ b/index.html
@@ -13,18 +13,15 @@
     </head>
 
     <body>
-        <nav>
-
-        </nav>
 
         <style>
             
         </style>
 
         <div class="leaves"></div>
-        <a><div class="github"></div></a>
+        <a href="https://github.com/popurriin" target="_blank"><div class="github"></div></a>
         <a><div class="linkedin" ></div></a>
-        <a><div class="email" ></div></a>
+        <a href="mailto: shan.jones@mail.utoronto.ca" target="_blank"><div class="email" ></div></a>
         <div class="vl"></div>
 
         <div class="title">
@@ -32,7 +29,7 @@
                 <h2>Shannon Victoria Delloro Jones</h2>
         </div>
 
-        <div>
+        <div class="about">
             <h1>About</h1>
                 <p></p>
         </div>
