--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="leaves"></div>
         <a href="https://github.com/popurriin" target="_blank"><div class="github"></div></a>
-        <a hrf="https://www.linkedin.com/in/popurriin/"><div class="linkedin" ></div></a>
+        <a href="https://www.linkedin.com/in/popurriin/" target="_blank"><div class="linkedin" ></div></a>
         <a href="mailto: shan.jones@mail.utoronto.ca" target="_blank"><div class="email" ></div></a>
         <div class="vl"></div>
 
