just a few more finishing touches and i will bee done

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
         <div class="sect movedown2">
             <section id="1"> 
                 <h1 >About</h1>
-                    <p class="para">"Hi, I'm Shannon, currently a second year Computer Engineering student studying at 
+                    <p class="para">"Hi, I'm Shannon (I also go by Purriin or Popurriin on the internet, depending on availability of the former). 
+                        I am currently a second year Computer Engineering student studying at 
                         the University of Toronto. I love to learn and create new things. As such, I <i>may </i>
                         have too many hobbies: coding, visual arts, knitting, crocheting, video editing, reading, 
                         journaling, and probably more to come in the future! I hope to pursue a career that allows 
                         me to embrace my creative side, whether it be to solve real world problems or to create 
-                        something for recreational value."
+                        something with recreational value."
                     </p>
             </section>
         </div>
@@ -136,24 +137,35 @@
 
                     <div class="exp">
                         <h2 class="sub_title">Portfolio Website (2023)</h2>
-                        <p class="desc">Otherwise known as the website you are looking at right now! This is 
-                            my very first time <br> coding a website in HTML/CSS and using Git to upload my projects 
+                        <p class="desc">Otherwise known as the <a href="https:popurriin.github.io/#4">website</a> you are looking at right now! This is 
+                            my very first time coding a website in HTML/CSS and using Git to upload my projects 
                             to GitHub. I had a ton of fun working on it and learned a lot about developing websites. 
                             I found this project to be an excellent way to learn the tools and want to apply this 
-                            strategy to learn other tools (My next goal: JavaScript & React).
+                            strategy to learn other tools (My next goal: JavaScript & React). In addition, this website
+                            is currently not mobile friendly so I am working to fix that as I am typing this.
                         </p>
                     </div>
                     <div class="exp_line"></div>
 
                     <div class="exp">
                         <h2 class="sub_title">Engineering Strategies & Practice II (2022)</h2>
-                        <p class="desc"></p>
+                        <p class="desc">Our team was tasked by our client to come up with a solution or preventative measure for grime accumulating
+                            on their apartment windows. To create the best possible solution, we researched the causes and the current
+                            solutions on the market, held 3 meetings with our client to ask questions, and applied the engineering design
+                            process to funnel our ideas. Our top design was a titanium dioxide coating with which we created a testable
+                            prototype in a lab setting.
+                        </p>
                     </div>
                     <div class="exp_line"></div>
 
                     <div class="exp">
                         <h2 class="sub_title">Engineering Strategies & Practice I (2021)</h2>
-                        <p class="desc"></p>
+                        <p class="desc">Worked as the leader of my first year design team. Our task was to create an add on 
+                            to a delivery robot to make it more accessibility friendly. I helped keep my team organized by implementing 
+                            a weekly planner and designating tasks. Administered the engineering design process to funnel our ideas down
+                            to 3 alternative designs that cover most of the design space. As a team, we created a culmulative document
+                            describing our process of how we reached our top 3 solutions.
+                        </p>
                     </div>
                     <div class="exp_line"></div>
 
@@ -174,44 +186,69 @@
         <div class="sect">
             <section id="5">
                 <h1>Experiences</h1>
-                    <p class="para">A variety of my extracurricular, volunteering and working experiences.</p>
+                    <p class="para">A list of my extracurricular, volunteering and working experiences.</p>
                     
                     <div class="exp">
                         <h2 class="sub_title">Skulecraft (2022 - Present)</h2>
                             <p class="desc">Skulecraft is the official Minecraft server and club for University of Toronto's 
                                 engineering students. I am currently working as the VP Social in charge of advertising the 
                                 server on our Instagram platform <a href="https://www.instagram.com/skulecraft" target="_blank">@skulecraft</a>, 
-                                moderating the server's discord channel, whitelisting new members, and planning out social events.</p>
+                                moderating the server's discord channel, whitelisting new members, and planning out social events.
+                            </p>
                     </div>
                     <div class="exp_line"></div>
 
                     <div class="exp">
-                        <h2 class="sub_title">Global Brigades (2022)</h2>
-                        <p class="desc"></p>
+                        <h2 class="sub_title">Global Brigades (August 2022)</h2>
+                        <p class="desc">Participated in the University of Toronto Engineering Brigade as a student volunteer. Raised money and
+                            travelled to Honduras for 1 week to help the community of <a href="https://www.globalbrigades.org/communities/parihuaca/" target="_blank">Parihuaca, Nacaome</a>
+                            by designing a water system. The community had lacked 
+                            a safe and convenient source of water as both their well and dam became inoperative. Volunteer work consisted of communicating
+                            with townsfolk, taking measurements for the pipeline, mapping out the system and conducting a presentation to the community to 
+                            showcase the design and budget.
+                        </p>
                     </div>
                     <div class="exp_line"></div>
 
                     <div class="exp">
                         <h2 class="sub_title">i4 Competition (2021)</h2>
-                        <p class="desc"></p>
+                        <p class="desc">Competed in a group of 4 in the University of Waterloo run i4 Competition. It was a one day
+                            manufacturing engineering based competition that tested our time-management and analytical skills.
+                            We were given a simulation of a production line with which
+                            we analyzed the manufacturing process and noted the process, layout, and efficiency of the overall
+                            system. From this, we wrote status reports of our progress, completed each milestone task and eventually
+                            came up with a way to optimize the production line. 
+                        </p>
                     </div>
                     <div class="exp_line"></div>
 
                     <div class="exp">
                         <h2 class="sub_title">Art Committee (2020 - 2021)</h2>
-                        <p class="desc"></p>
+                        <p class="desc">Was the web developer of my high school Art Committee club. Helped maintain
+                            and add submitted art work monthly. Created artwork for the site and participated in
+                            setting up school-wide activities for other students to participate in. For example, Halloween face painting,
+                            Art Committee Goes Abroad, and spot landmark paintings around the school.
+                        </p>
                     </div>
                     <div class="exp_line"></div>
                         
                     <div class="exp">
                         <h2 class="sub_title">Dr. Tsang Dental Office (2018 - 2020)</h2>
-                        <p class="desc"></p>
+                        <p class="desc">Volunteered in August of 2018 for 72 hours. Volunteer work consisted of communicating
+                            with clients for recall, scheduling appointments, organizing files, and preparing dental equipment
+                            for future use. <br> <br>
+                            Also worked as a cleaner to assist in mopping, vacuuming, and cleaning toilets.
+                        </p>
                     </div>
                     <div class="exp_line"></div>
 
                     <div class="exp">
                         <h2 class="sub_title">St. Pope John Paul II 35th Anniversary (2018)</h2>
-                        <p class="desc"></p>
+                        <p class="desc">Volunteered to help create a mural of St. John Paul II for my high school's anniversary. 
+                            During this time, I also volunteered to create a slideshow for an alumni event that
+                            consisted of almost 35 years worth of yearbook content and images. During the anniversary,
+                            I helped set up the projector to showcase the slides.
+                        </p>
                     </div>
                     <div class="exp_line"></div>
             </section>
