--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <a class="navi education" href="#3">Education</a> <br>
             <a class="navi projects" href="#4">Projects</a> <br>
             <a class="navi experiences" href="#5">Experiences</a>
-            <a class="navi cv">CV</a>
+            <a class="navi cv" href="assets/Shannon Jones - CV 2023.pdf" target="_blank">CV</a>
         </div>
     </body>
 </html>
