changed mobile setup

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     </head>
 
     <body>
+    <div class="mobile">
+        <section id="0">
+            <div class="title">
+                    <h1>Shannon <br> Jones</h1>
+                        <h2>Computer Engineering Student</h2>
+                        <p>Site is not compatible with different aspect ratios yet! Please check it out on desktop.</p>
+            </div>
+        </section>
+        
+    </div>
+
+    <div class="desktop">
         <section id="0">
         <div class="leaves"></div>
         <a href="https://github.com/popurriin" target="_blank"><div class="github"></div></a>
@@ -263,5 +275,6 @@
             <a class="navi experiences" href="#5">Experiences</a>
             <a class="navi cv" href="assets/Shannon Jones - CV 2023.pdf" target="_blank">CV</a>
         </div>
+    </div>
     </body>
 </html>
