further fixed aspect ratio issue

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="title">
                     <h1>Shannon <br> Jones</h1>
                         <h2>Computer Engineering Student</h2>
-                        <p>Site is not compatible with different aspect ratios yet! Please check it out on desktop.</p>
+                        <p>Site is not compatible with different aspect ratios yet! Please check it out on a wider screen.</p>
             </div>
         </section>
         
